sfexchange-dreamforce-project/src/objects/QuizzAnswer__c.object
<CustomObject>
    <description>Answers on a quizz question</description>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Full answer. We don&apos;t use name because of the 80 char limit.</description>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuizzQuestionRef__c</fullName>
        <label>Quizz Question</label>
        <referenceTo>QuizzQuestion__c</referenceTo>
        <relationshipLabel>Quizz Answers</relationshipLabel>
        <relationshipName>Quizz_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Quizz Answer</label>
    <nameField>
        <displayFormat>Answer-{0000}</displayFormat>
        <label>Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quizz Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>